--- a/package.json
+++ b/package.json
@@ -7,19 +7,20 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "vite preview --host"
+    "start": "node server.js",
+    "lint": "tsc --noEmit"
   },
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "lucide-react": "^0.555.0",
-    "framer-motion": "^12.23.24"
+    "framer-motion": "^12.23.24",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
     "@vitejs/plugin-react": "^5.0.0",
     "typescript": "~5.8.2",
-    "vite": "^6.2.0",
-    "terser": "^5.31.0"
+    "vite": "^6.2.0"
   }
 }
